[package]
name = "pinar-derive"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"
description = "macro derives for pinar"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits", "clone-impls", "visit"] }
quote = "1.0"
